<resources>
    <string name="app_name">UpToDate</string>
    <string name="add_product_btn">Add</string>
    <string name="product_name_label">Product name</string>
    <string name="date_of_expiry_label">Date of expiry</string>
    <string name="submit_btn">Submit</string>
    <string name="channelId">com.example.uptodate</string>
    <string name="channelName">Up to date</string>
    <string name="channelDescription">Your product s date has expired</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cancelDialogTitle">Cancel</string>
    <string name="cancelDialogSupportingText">Are you sure you want to stop adding the product?</string>
    <string name="deleteDialogTitle">Delete product</string>
    <string name="deleteDialogSupportingText">Are you sure you want to remove this product?</string>
    <string name="errorNewProductName">Product name is empty</string>
    <string name="errorNewProductDate">Product date is empty</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="activeState">Active</string>
    <string name="inactiveState">Inactive</string>
    <string name="notificationTextTitle">UpToDate warning</string>
    <string name="newProductActivityToolbar">New product</string>
    <string name="productDetailedViewSubtitle">Details</string>
    <string name="productDetailedViewFirstField">Added on</string>
    <string name="productDetailedViewSecondField">Expires on</string>
    <string name="recyclerViewItemTextView">Expires on</string>
</resources>
