<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/product_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:maxHeight="@dimen/bottomSheetMaxHeight">
    <TextView
        android:id="@+id/productNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/productNameTextSize"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/productNameMarginTop"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableBottomCompat="@drawable/prod_img" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameTextView"
        app:layout_constraintVertical_bias="1.0"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#e0e0e0"
        card_view:cardPreventCornerOverlap="false"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateOfExpiringTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/bottomSheetDateOfExpiryMarginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.873"
                app:layout_constraintStart_toEndOf="@+id/expiresOnTextView"
                app:layout_constraintTop_toBottomOf="@+id/dateOfAddingTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bottomSheetHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottomSheetHeaderMarginTop"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/productDetailedViewSubtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addedOnTextView"
                style="@style/addedOnItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/productDetailedViewFirstField"
                android:textSize="@dimen/bottomSheetTextViewTextSize"
                android:layout_marginTop="@dimen/bottomSheetTextViewMarginTop"
                app:layout_constraintBottom_toTopOf="@+id/expiresOnTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetHeader" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/expiresOnTextView"
                style="@style/expiresOnItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottomSheetTextViewMarginBottom"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/productDetailedViewSecondField"
                android:textSize="@dimen/bottomSheetTextViewTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateOfAddingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.873"
                app:layout_constraintStart_toEndOf="@+id/addedOnTextView"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetHeader" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/activityStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activityStateTextSize"
        android:layout_marginTop="@dimen/activityStateMargin"
        android:layout_marginBottom="@dimen/activityStateMargin"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>